# KmeansC-OpenMP

./: 1.c  CMakeLists.txt  KMeans.c  KMeansLoop.c  Kmeans  README.md
